src/snapshots/bl__tests__snapshots__cmd_add-skill.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Install browserlane browser skill for Claude Code

Usage: bl add-skill [OPTIONS]

Options:
      --stdout   Print skill content to stdout instead of installing
  -v, --verbose  Enable debug logging
  -h, --help     Print help

Examples:
  bl add-skill
  # Installs skill to ~/.claude/skills/browserlane/

  bl add-skill --stdout
  # Print skill content to stdout
