src/snapshots/bl__tests__snapshots__cmd_back.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Navigate back in browser history

Usage: bl back [OPTIONS]

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl back
  # Go back one page (like clicking the back button)
