src/snapshots/bl__tests__snapshots__cmd_bidi-test.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Launch browser, connect via BiDi, send session.status

Usage: bl bidi-test [OPTIONS]

Options:
  -v, --verbose  Enable debug logging
  -h, --help     Print help
