src/snapshots/bl__tests__snapshots__cmd_click.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Click an element (optionally navigate to URL first)

Usage: bl click [OPTIONS] <args>...

Arguments:
  <args>...  [url] selector — optional URL to navigate first, then the selector to click

Options:
      --timeout <timeout>  Timeout for actionability checks (e.g., 5s, 30s) [default: 30s]
  -v, --verbose            Enable debug logging
      --headless           Hide browser window (visible by default)
      --json               Output as JSON
  -h, --help               Print help

Examples:
  bl click "a"
  # Clicks on current page

  bl click https://example.com "a"
  # Navigates to URL first, then clicks

  bl click https://example.com "a" --timeout 5s
  # Custom timeout for actionability checks
