src/snapshots/bl__tests__snapshots__cmd_cookies.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Manage browser cookies

Usage: bl cookies [OPTIONS] [args]... [COMMAND]

Commands:
  clear  Clear all cookies
  help   Print this message or the help of the given subcommand(s)

Arguments:
  [args]...  Cookie name and value to set (omit both to list all cookies)

Options:
  -v, --verbose   Enable debug logging
      --headless  Hide browser window (visible by default)
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl cookies
  # List all cookies

  bl cookies "session" "abc123"
  # Set a cookie with name and value
